--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,13 +43,21 @@ quickcheck = "0.6"
 quick-error = "1.0"
 
 [features]
-default = ["std"]
+default = [
+    "std"
+]
+no-std = []
 # Run the mp4 benchmark, requires a mp4 file named `small.mp4` in the benches directory
 mp4 = []
 # Enables use of regex version 1 in the regex parsers
 regex-1 = ["combine-regex-1"]
 doc = ["regex", "regex-1"]
-std = ["memchr/use_std", "either/use_std", "byteorder/std", "ascii/std"]
+std = [
+    "memchr/use_std",
+    "either/use_std",
+    "byteorder/std",
+    "ascii/std",
+]
 
 [[bench]]
 name = "json"
